# Minecraft-Rebalanced

./: .gitignore  README.md  beet.yaml  config.json  pack.mcmeta  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
data/global/advancements/: 2mal3.json  root.json
data/minecraft/dimension_type/: overworld.json
data/minecraft/loot_tables/blocks/: acacia_leaves.json  azalea_leaves.json  beetroots.json  birch_leaves.json  birch_leaves.json.json  carrots.json  dark_oak_leaves.json  dark_oak_leaves.json.json  deepslate_lapis_ore.json  flowering_azalea_leaves.json  infested_chiseled_stone_bricks.json  infested_cobblestone.json  infested_cracked_stone_bricks.json  infested_deepslate.json  infested_mossy_stone_bricks.json  infested_stone.json  infested_stone_bricks.json  jungle_leaves.json  lapis_ore.json  mangrove_leaves.json  melon.json  oak_leaves.json  potatoes.json  spawner.json  spruce_leaves.json  sweet_berry_bush.json  wheat.json
data/minecraft/loot_tables/chests/: buried_treasure.json  desert_pyramid.json  end_city_treasure.json  jungle_temple.json  jungle_temple_dispenser.json  nether_bridge.json  pillager_outpost.json  simple_dungeon.json  (+5 more)
data/mire/loot_tables/: chocolate_milk.json  iron_scythe.json
macros/: wait.mcm
src/mire/: core.mc  random.mc  utilities.mc
src/mire/entity/: enderman.mc  pet.mc  pig.mc  skeleton.mc  spider.mc  squid.mc  vex.mc  wandering_trader.mc  wither_skeleton.mc  zombie.mc
src/mire/item/: food.mc  healing_potion.mc  honey_bottle.mc  spectral_arrow.mc  totem_of_undying.mc
src/mire/world/: rain.mc  story.mc
(+253 files in other folders)
