[tool.poetry]
name = "minecraft-rebalanced"
version = "0.1.0"
description = ""
authors = ["2mal3 <56305732+2mal3@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beet = "^0.97.1"
mecha = "^0.73.1"
bolt = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
